--- a/rpiscanserver.cabal
+++ b/rpiscanserver.cabal
@@ -18,15 +18,18 @@ library
   exposed-modules:     Lib
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , snap-core
                      , snap-server
 
 executable rpiscanserver
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
   build-depends:       base
                      , rpiscanserver
-  default-language:    Haskell2010
+                     , snap-core
+                     , snap-server
 
 test-suite rpiscanserver-test
   type:                exitcode-stdio-1.0
